--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
 :root {
   --main-color-text: #212121;
   --accent-color: #2196f3;
@@ -6,6 +16,7 @@
 }
 
 body {
+  margin: 0;
   color: var(--main-color-text);
   background-color: #e5e5e5;
 
