--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,11 @@ h6 {
   background-color: #ffffff;
 }
 
+.nav {
+  display: flex;
+  align-items: center;
+}
+
 .logo-link {
   font-family: Raleway, sans-serif;
   font-style: normal;
@@ -105,12 +110,43 @@ h6 {
   letter-spacing: 0.02em;
 }
 
+.nav-list .link {
+  display: block;
+  padding-bottom: 32px;
+  padding-top: 32px;
+}
+
+.link-tel,
+.link-mail {
+  padding-bottom: 32px;
+  padding-top: 32px;
+}
+
+.nav-list {
+  display: flex;
+  margin-left: 85px;
+}
+
+.nav-list .nav-items:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav-contakt .nav-items:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav-contakt {
+  display: flex;
+  margin-left: auto;
+}
+
 /*Главный контент страницы*/
 
 /*Секция герой*/
 
 .section-heroy {
   margin-bottom: 94px;
+  text-align: center;
 }
 
 .section-heroy .hero-title {
@@ -123,7 +159,6 @@ h6 {
   line-height: 1.36;
   /* or 136% */
 
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
@@ -152,9 +187,27 @@ h6 {
   width: 270px;
 }
 
+.section-iteams-team:not(:last-child) {
+  margin-right: 30px;
+}
+
+.section-items {
+  width: calc((100%-90px) / 4);
+}
+
+.section-items:not(:last-child) {
+  margin-right: 30px;
+}
+
+.advantages {
+  display: flex;
+  margin-bottom: 94px;
+}
+
 .section .section-img {
   margin-top: 25px;
   margin-bottom: 55px;
+  margin-left: 100px;
 }
 
 .section-title {
@@ -205,8 +258,16 @@ h6 {
 }
 
 .work-items {
-  width: 370px;
-  outline: 2px solid white;
+  width: ((100%-60px)/3);
+}
+
+.work-items:not(:last-child) {
+  margin-right: 30px;
+}
+
+.work-list {
+  display: flex;
+  margin-bottom: 188px;
 }
 
 .title-work {
@@ -230,6 +291,11 @@ h6 {
   text-align: center;
 }
 
+.team-list {
+  display: flex;
+  margin-bottom: 188px;
+}
+
 .team-img {
   margin-bottom: 30px;
 }
@@ -246,6 +312,15 @@ h6 {
 
 .title-customers {
   margin-bottom: 50px;
+}
+
+.client-list {
+  display: flex;
+  margin-bottom: 94px;
+}
+
+.client-items:not(:last-child) {
+  margin-right: 30px;
 }
 
 /*Футер*/
@@ -289,7 +364,15 @@ h6 {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.footer-addres {
+  margin-top: 45px;
+  margin-bottom: 46px;
+}
+
 .social {
+  margin-left: 69px;
+  margin-top: 57px;
+
   color: var(--third-color-text);
 
   font-weight: bold;
@@ -303,6 +386,10 @@ h6 {
   text-transform: uppercase;
 }
 
+.footer-bloks {
+  display: flex;
+}
+
 .dbr {
   margin-top: 0;
   margin-bottom: 21px;
@@ -312,6 +399,7 @@ h6 {
   line-height: 2;
 
   text-align: center;
+  margin: 0;
 }
 
 /* Портфолио*/
@@ -334,6 +422,17 @@ h6 {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
+}
+
+.button-items:not(:last-child) {
+  margin-right: 8px;
+}
+
+.button-list {
+  display: flex;
+  margin-top: 93px;
+  margin-bottom: 50px;
+  justify-content: center;
 }
 
 .port-title {
@@ -370,9 +469,24 @@ h6 {
 }
 
 .port-list {
-  width: 370px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .port-img {
   margin-bottom: 20px;
+}
+
+.port-items {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.port-items:nth-child(3n) {
+  margin-right: 0;
+}
+
+.port-items:nth-last-child(-n + 3) {
+  margin-bottom: 94px;
 }
