--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ h6 {
 }
 
 .section-items {
-  width: calc((100%-90px) / 4);
+  width: calc((100% - 90px) / 4);
 }
 
 .section-items:not(:last-child) {
@@ -259,7 +259,7 @@ h6 {
 }
 
 .work-items {
-  width: calc((100%-60px) / 3);
+  width: calc((100% - 60px) / 3);
 }
 
 .work-items:not(:last-child) {
