--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ h6 {
 
 .advantages {
   display: flex;
-  margin-bottom: 94px;
+  padding-bottom: 94px;
   align-items: center;
 }
 
@@ -268,7 +268,7 @@ h6 {
 
 .work-list {
   display: flex;
-  margin-bottom: 188px;
+  padding-bottom: 94px;
 }
 
 .title-work {
@@ -294,7 +294,7 @@ h6 {
 
 .team-list {
   display: flex;
-  margin-bottom: 188px;
+  padding-bottom: 94px;
 }
 
 .team-img {
@@ -317,7 +317,7 @@ h6 {
 
 .client-list {
   display: flex;
-  margin-bottom: 94px;
+  padding-bottom: 94px;
 }
 
 .client-items:not(:last-child) {
@@ -431,7 +431,7 @@ h6 {
 
 .button-list {
   display: flex;
-  margin-top: 93px;
+  padding-top: 93px;
   margin-bottom: 50px;
   justify-content: center;
 }
@@ -489,5 +489,6 @@ h6 {
 }
 
 .port-items:nth-last-child(-n + 3) {
-  margin-bottom: 94px;
+  margin-bottom: 0;
+  padding-bottom: 94px;
 }
